<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.DetailsActivity"
    android:background="@color/colorGrey"

    >
<android.support.constraint.ConstraintLayout
    android:id="@+id/activityDetailsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.neighbour_list.DetailsActivity"
    android:background="@color/colorGrey"
    android:paddingBottom="10dp"
    android:layout_marginBottom="10dp"

    >

    <ImageView
        android:id="@+id/neighbourAvatar"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_marginBottom="64dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/neighbourNameAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="185dp"
        android:text="@string/neighbour_name"
        android:textColor="@android:color/white"
        android:textSize="25dp"
        android:textStyle=""
        app:layout_constraintBottom_toBottomOf="@+id/neighbourAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:background="@color/colorGrey"
        android:backgroundTint="@color/colorGrey"
        android:clickable="true"
        app:borderWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />

    <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neighbourAvatar"
        >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/imageViewLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_location_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <ImageView
                    android:id="@+id/imageViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_phone_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewLocation" />

                <ImageView
                    android:id="@+id/imageViewUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_url_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewPhone" />


                <TextView
                    android:id="@+id/cardViewNeighbourName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/neighbour_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/neighbourPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/neighbourPhone"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewPhone"
                    app:layout_constraintStart_toEndOf="@+id/imageViewPhone"
                    app:layout_constraintTop_toTopOf="@+id/imageViewPhone" />

                <TextView
                    android:id="@+id/neighbourAdress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/neighbour_adress"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewLocation"
                    app:layout_constraintStart_toEndOf="@+id/imageViewLocation"
                    app:layout_constraintTop_toTopOf="@+id/imageViewLocation" />

                <TextView
                    android:id="@+id/neighbourUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/neighbourUrl"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewUrl"
                    app:layout_constraintStart_toEndOf="@+id/imageViewUrl"
                    app:layout_constraintTop_toTopOf="@+id/imageViewUrl" />


                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardViewNeighbourName" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aboutMe"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGrey"
                app:layout_constraintTop_toBottomOf="@+id/aboutMe" />

            <TextView
                android:id="@+id/neighbourAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/neighbout_about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewAbout" />

</android.support.constraint.ConstraintLayout>></ScrollView>